stderr
JudgeMan.java:148: error: illegal start of expression
    private static boolean isRoyal(int[] intArray){
    ^
JudgeMan.java:154: error: reached end of file while parsing
}
 ^
2 errors
